@@ -1,3 +1,9 @@
+2006-04-20  David Reveman  <davidr@novell.com>
+
+	* src/window.c (getModalTransient): Group transient must not be an
+	ancestor to the window we've currently found as the window to focus.
+	(getModalTransient): Check for child modal transient.
+
 2006-04-19  David Reveman  <davidr@novell.com>
 
 	* gnome/compiz-window-manager.c: Be nice to gnome-theme-manager
